# basidian

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
arch/: 00_MAP.md  01_system_arch.md  02_database.md  03_api.md  04_plugin_system.md  05_cli_tools.md  06_frontend_ui.md  07_testing.md
arch/adr/: 001_two_tier_testing.md
arch/specs/: IMPLEMENTATION.md
backend/: .gitignore  go.mod  go.sum  main.go  pyproject.toml
backend/database/: db.go
backend/handlers/: daily_files.go  filesystem.go  notes.go
backend/routes/: setup.go
backend/src/basidian/: __init__.py
backend/src/basidian_server/: __init__.py  basync.py  basync_client.py  bscli.py  database.py  main.py  migrations.py  models.py
backend/src/basidian_server/handlers/: __init__.py  daily.py  filesystem.py  notes.py
backend/src/basync/: __init__.py  main.py
backend/src/bscli/: main.py
backend/src/plugins/: daily_notes.py
backend/src/server/: db.py
backend/src/server/handlers/: filesystem.py  notes.py
basidian/: __init__.py  client.py  models.py
basidian/basync/: main.py
basidian/bscli/: main.py
basidian/plugins/: __init__.py  daily_notes.py
basidian/server/: db.py  main.py  metadata.py  migrations.py
basync/: config.py  main.py
bscli/: __init__.py  main.py
core/: __init__.py
core/plugins/: daily_notes.py
frontend/: .gitignore  README.md  justfile  package-lock.json  package.json  playwright.config.ts  pubspec.yaml  vite.config.ts  vitest.config.ts
frontend/e2e/: fixtures.ts  visual.spec.ts
frontend/lib/: main.dart
frontend/src/: app.css  app.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  mobile.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/test/: widget_test.dart
server/: main.py
server/handlers/: filesystem.py  notes.py
specs/001-ai-chat/: data-model.md  plan.md  spec.md  (+2 more)
(+134 files in other folders)
