[project]
name = "basidian-server"
version = "0.1.0"
description = "Basidian Second Brain Backend"
readme = "README.md"
authors = [
    { name = "Dmitrii Lipin", email = "dimich3d@ya.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "loguru>=0.7.3",
    "httpx>=0.27.0",
]

[project.scripts]
basidian-server = "basidian_server.main:cli"
bscli = "basidian_server.bscli:cli"
basync = "basidian_server.basync:cli"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
