[package]
name = "basidian"
version = "0.1.0"
description = "A second brain note-taking application"
authors = ["Dima"]
license = "MIT"
edition = "2021"

[lib]
name = "basidian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-safe-area-insets = "0.1.0"
